Revise README for production configuration and SSL setup
Updated README with production-ready configuration files and TLS/SSL corrections. Removed legacy extensions and optimized PostgreSQL metadata settings.